creusot/tests/should_fail/bad_borrow.stderr
error[E0499]: cannot borrow `x` as mutable more than once at a time
 --> bad_borrow.rs:4:13
  |
3 |     let a = &mut x;
  |             ------ first mutable borrow occurs here
4 |     let b = &mut x;
  |             ^^^^^^ second mutable borrow occurs here
5 |
6 |     *a += *b;
  |     -------- first borrow later used here

thread 'rustc' panicked at 'called `Option::unwrap()` on a `None` value', creusot/src/backend/ty_inv.rs:438:87
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

note: Creusot has panic-ed!
  |
  = note: Oops, that shouldn't have happened, sorry about that.
  = note: Please report this bug over here: https://github.com/xldenis/creusot/issues/new

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
